@@ -1,5 +1,5 @@
 /*
- * Copyright 2025 Laszlo Balazs-Csiki and Contributors
+ * Copyright 2026 Laszlo Balazs-Csiki and Contributors
  *
  * This file is part of Pixelitor. Pixelitor is free software: you
  * can redistribute it and/or modify it under the terms of the GNU
@@ -27,8 +27,8 @@ import javax.swing.event.ChangeEvent;
 import javax.swing.event.ChangeListener;
 import javax.swing.event.EventListenerList;
 import java.io.Serial;
+import java.util.Locale;
 
-import static java.lang.String.format;
 import static pixelitor.filters.gui.RandomizeMode.ALLOW_RANDOMIZE;
 
 /**
@@ -186,7 +186,7 @@ public class AngleParam extends AbstractFilterParam {
 
     @Override
     public String getValueAsString() {
-        return format("%.2f", normalize(angle));
+        return String.format("%.2f", normalize(angle));
     }
 
     private static double normalize(double angle) {
@@ -195,7 +195,7 @@ public class AngleParam extends AbstractFilterParam {
 
     @Override
     public String toString() {
-        return format("%s[name = '%s', angle = %.2f]",
+        return String.format("%s[name = '%s', angle = %.2f]",
             getClass().getSimpleName(), getName(), angle);
     }
 
@@ -214,7 +214,7 @@ public class AngleParam extends AbstractFilterParam {
 
         @Override
         public String toSaveString() {
-            return "%.2f".formatted(angle);
+            return String.format(Locale.ROOT, "%.2f", angle);
         }
     }
 }
